--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 CODE/functions_repository.py
 CODE/functions_repository.py
 CODE/__pycache__/functions_repository.cpython-311.pyc
+CODE/__pycache__/eq_diff_solver.cpython-311.pyc
+CODE/__pycache__/model_api.cpython-311.pyc
 MATLAB_CODE/script_ode23.asv
